@@ -11,22 +11,19 @@ import com.monew.repository.ArticleInterestRepository;
 import com.monew.repository.InterestRepository;
 import com.monew.repository.article.ArticleRepository;
 import com.monew.service.impl.ArticleBackupServiceImpl;
-import java.util.Collections;
-import org.junit.jupiter.api.BeforeEach;
+import com.monew.storage.backup.ArticleBackupStorage;
+import java.util.Map;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentMatchers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.core.io.Resource;
-import org.springframework.core.io.WritableResource;
-import org.springframework.core.io.support.ResourcePatternResolver;
-import org.springframework.test.util.ReflectionTestUtils;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
-import java.io.OutputStream;
 import java.time.Instant;
 import java.util.List;
 
@@ -47,14 +44,8 @@ class ArticleBackupServiceTest {
   @Mock private ArticleInterestRepository articleInterestRepository;
   @Mock private ObjectMapper objectMapper;
   @Mock private ArticleBackupMapper articleBackupMapper;
-  @Mock private ResourcePatternResolver resourcePatternResolver;
 
-  private final String BACKUP_DIR = "file:/tmp/backups/";
-
-  @BeforeEach
-  void setUp() {
-    ReflectionTestUtils.setField(backupService, "backupDir", BACKUP_DIR);
-  }
+  @Mock private ArticleBackupStorage articleBackupStorage;
 
   @Test
   @DisplayName("뉴스 기사 백업")
@@ -68,42 +59,37 @@ class ArticleBackupServiceTest {
         .build();
     given(articleBackupMapper.toDto(any(), any())).willReturn(mockDto);
 
-    WritableResource mockResource = mock(WritableResource.class);
-    given(resourcePatternResolver.getResource(anyString())).willReturn(mockResource);
-
-    given(mockResource.getURI()).willReturn(new java.net.URI("s3://dummy"));
-
-    OutputStream mockOutputStream = mock(OutputStream.class);
-    given(mockResource.getOutputStream()).willReturn(mockOutputStream);
+    String dummyJson = "[{\"title\":\"test\"}]";
+    given(objectMapper.writeValueAsString(any())).willReturn(dummyJson);
 
     backupService.export();
 
-    verify(objectMapper).writeValue(any(OutputStream.class), any(List.class));
+    verify(articleBackupStorage).saveBackup(anyString(), anyString());
   }
 
   @Test
   @DisplayName("뉴스 기사 복구")
   void importBackup_success() throws Exception {
     Resource mockResource = mock(Resource.class);
-    given(resourcePatternResolver.getResources(anyString())).willReturn(new Resource[]{mockResource});
-    given(mockResource.getFilename()).willReturn("backup_2077-12-31.json");
-
     InputStream mockInputStream = new ByteArrayInputStream("[]".getBytes());
     given(mockResource.getInputStream()).willReturn(mockInputStream);
+
+    given(articleBackupStorage.loadBackupResources()).willReturn(List.of(mockResource));
 
     ArticleBackupDto mockDto = ArticleBackupDto.builder()
         .title("test")
         .sourceUrl("http://test.com")
-        .interestNames(java.util.Set.of("IT"))
+        .interestKeywords(Map.of("IT", List.of("인공지능", "출시", "반도체")))
         .build();
-    given(objectMapper.readValue(any(InputStream.class), any(TypeReference.class)))
+    given(objectMapper.readValue(any(InputStream.class), ArgumentMatchers.<TypeReference<List<ArticleBackupDto>>>any()))
         .willReturn(List.of(mockDto));
 
-    given(articleRepository.existsBySourceUrl(mockDto.sourceUrl())).willReturn(false);
+    given(articleRepository.existsBySourceUrl("http://test.com")).willReturn(false);
+
     Article mockArticle = Article.builder().title("test").build();
     given(articleBackupMapper.toEntity(mockDto)).willReturn(mockArticle);
 
-    Interest mockInterest = new Interest("IT", Collections.singletonList("IT"));
+    Interest mockInterest = new Interest("IT", List.of("인공지능", "출시", "반도체"));
     given(interestRepository.findAll()).willReturn(List.of(mockInterest));
 
     backupService.importBackup();
